a modification est appliquée : le workflow GitHub Actions va maintenant déployer spécifiquement le service EVIMERIA, qui contient à la fois ton frontend et ton backend. Prochaine étape : Fais un commit/push (ou modifie un fichier) pour déclencher le workflow, ou lance-le manuellement dans l’onglet “Actions” de GitHub. Surveille le déploiement sur Railway : tu ne devrais plus avoir l’erreur “Multiple services found”.
a modification est appliquée : le workflow GitHub Actions va maintenant déployer spécifiquement le service EVIMERIA, qui contient à la fois ton frontend et ton backend.
Prochaine étape :
Fais un commit/push (ou modifie un fichier) pour déclencher le workflow, ou lance-le manuellement dans l’onglet “Actions” de GitHub.
Surveille le déploiement sur Railway : tu ne devrais plus avoir l’erreur “Multiple services found”.

--- a/.github/workflows/railway-deploy.yml
+++ b/.github/workflows/railway-deploy.yml
@@ -19,6 +19,6 @@ jobs:
           
       - name: Deploy to Railway
         run: |
-          railway up
+          railway up --service EVIMERIA
         env:
           RAILWAY_TOKEN: ${{ secrets.RAILWAY_TOKEN }} 
