Prochaine étape Fais un commit/push de ce fichier si ce n’est pas déjà fait. Relance le workflow GitHub Actions (push ou manuellement). Surveille le build sur Railway. Si une nouvelle erreur apparaît, envoie-moi la capture ou le message d’erreur, je t’aide à la corriger ! Tu es vraiment à la dernière étape technique, courage ! 🚀
Prochaine étape
Fais un commit/push de ce fichier si ce n’est pas déjà fait.
Relance le workflow GitHub Actions (push ou manuellement).
Surveille le build sur Railway.
Si une nouvelle erreur apparaît, envoie-moi la capture ou le message d’erreur, je t’aide à la corriger !
Tu es vraiment à la dernière étape technique, courage ! 🚀

--- a/railway.toml
+++ b/railway.toml
@@ -10,7 +10,7 @@ provider = "nixpacks"
 noDocker = true
 
 [phases.setup]
-nixPkgs = ["python3", "postgresql", "gcc"]
+nixPkgs = ['python3', 'python3Packages.pip', 'postgresql', 'gcc']
 
 [[services]]
 name = "backend"
