--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ['python3', 'python3.11-pip', 'postgresql', 'gcc']
+nixPkgs = ['python3', 'python3Packages.pip', 'postgresql', 'gcc']
 
 [phases.install]
 cmds = [
