Les modifications sont appliquées : L’option --break-system-packages a été ajoutée à toutes les commandes pip install dans nixpacks.toml et railway.toml. Prochaine étape : Commit & push ces fichiers si ce n’est pas déjà fait. Relance le workflow GitHub Actions. Surveille le build sur Railway.
Les modifications sont appliquées :
L’option --break-system-packages a été ajoutée à toutes les commandes pip install dans nixpacks.toml et railway.toml.
Prochaine étape :
Commit & push ces fichiers si ce n’est pas déjà fait.
Relance le workflow GitHub Actions.
Surveille le build sur Railway.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,7 +3,7 @@ nixPkgs = ['python3', 'python3Packages.pip', 'postgresql', 'gcc']
 
 [phases.install]
 cmds = [
-  'cd backend && pip install -r requirements.txt',
+  'cd backend && pip install --break-system-packages -r requirements.txt',
   'cd frontend && npm ci'
 ]
 
