--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,6 @@
 [build]
 builder = "nixpacks"
-buildCommand = "cd backend && pip install -r requirements.txt && cd ../frontend && npm ci && npm run build"
+buildCommand = "cd backend && pip install --break-system-packages -r requirements.txt && cd ../frontend && npm ci && npm run build"
 
 [deploy]
 startCommand = "cd backend && gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT"
