--- a/railway.toml
+++ b/railway.toml
@@ -10,7 +10,7 @@ provider = "nixpacks"
 noDocker = true
 
 [phases.setup]
-nixPkgs = ['python3', 'python3Packages.pip', 'postgresql', 'gcc']
+nixPkgs = ['python3', 'python3Packages.pip', 'postgresql', 'gcc', 'nodejs']
 
 [[services]]
 name = "backend"
