--- a/backend/Procfile
+++ b/backend/Procfile
@@ -1,1 +1,1 @@
-web: python manage.py collectstatic --noinput && python manage.py migrate --noinput && python manage.py runserver 0.0.0.0:$PORT 
+web: python manage.py collectstatic --noinput && python manage.py migrate --noinput && gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT 
