J'ai modifié les trois fichiers de configuration (Procfile, nixpacks.toml et railway.toml) pour utiliser python -m gunicorn au lieu de gunicorn directement. Cette approche devrait résoudre le problème "command not found" car elle exécute Gunicorn en tant que module Python plutôt que de chercher l'exécutable Gunicorn dans le PATH. Essayez de redéployer votre application maintenant. Cette modification devrait résoudre le problème d'erreur "gunicorn: command not found" que vous rencontrez.
J'ai modifié les trois fichiers de configuration (Procfile, nixpacks.toml et railway.toml) pour utiliser python -m gunicorn au lieu de gunicorn directement. Cette approche devrait résoudre le problème "command not found" car elle exécute Gunicorn en tant que module Python plutôt que de chercher l'exécutable Gunicorn dans le PATH.
Essayez de redéployer votre application maintenant. Cette modification devrait résoudre le problème d'erreur "gunicorn: command not found" que vous rencontrez.

--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "cd backend && pip install --break-system-packages -r requirements.txt && cd ../frontend && npm ci --legacy-peer-deps && npm run build"
 
 [deploy]
-startCommand = "cd backend && gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT"
+startCommand = "cd backend && python -m gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT"
 healthcheckPath = "/"
 healthcheckTimeout = 300
 provider = "nixpacks"
