arfait ! J'ai apporté les modifications suivantes : Dans railway.toml, j'ai ajouté une commande pour créer le répertoire staticfiles pendant la phase de construction Dans nixpacks.toml, j'ai ajouté la création du répertoire staticfiles avant d'exécuter collectstatic Ces modifications devraient résoudre l'avertissement concernant le répertoire manquant. La création explicite du répertoire staticfiles s'assure qu'il existe avant que Django n'essaie d'y copier les fichiers.
arfait ! J'ai apporté les modifications suivantes :
Dans railway.toml, j'ai ajouté une commande pour créer le répertoire staticfiles pendant la phase de construction
Dans nixpacks.toml, j'ai ajouté la création du répertoire staticfiles avant d'exécuter collectstatic
Ces modifications devraient résoudre l'avertissement concernant le répertoire manquant. La création explicite du répertoire staticfiles s'assure qu'il existe avant que Django n'essaie d'y copier les fichiers.

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -10,7 +10,7 @@ cmds = [
 [phases.build]
 cmds = [
   'cd frontend && npm run build',
-  'cd backend && python manage.py collectstatic --noinput'
+  'cd backend && mkdir -p staticfiles && python manage.py collectstatic --noinput'
 ]
 
 [start]
