--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ buildCommand = "cd backend && pip install --break-system-packages -r requirement
 
 [deploy]
 startCommand = "cd backend && python -m gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT"
-healthcheckPath = "/"
+healthcheckPath = "/health/"
 healthcheckTimeout = 300
 provider = "nixpacks"
 noDocker = true
