--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -14,4 +14,4 @@ cmds = [
 ]
 
 [start]
-cmd = 'cd backend && python -m gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT' 
+cmd = 'cd backend && python manage.py migrate --noinput && python -m gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT' 
