--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "cd backend && pip install --break-system-packages -r requirements.txt && cd ../frontend && npm ci --legacy-peer-deps && npm run build && cd ../backend && mkdir -p staticfiles"
 
 [deploy]
-startCommand = "cd backend && python -m gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT --workers=1 --timeout=120"
+startCommand = "cd backend && python manage.py migrate --noinput && python -m gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT --workers=1 --timeout=120"
 healthcheckPath = "/status/"
 healthcheckTimeout = 300
 provider = "nixpacks"
