Voilà ! J'ai effectué trois modifications importantes pour résoudre définitivement le problème des fichiers statiques : Dans settings.py : Configuration de Whitenoise simplifiée et renforcée, active en développement et en production Ajout de paramètres de compression et de cache pour améliorer les performances Vérification que le middleware Whitenoise est bien positionné dans tous les cas Dans railway.toml : Ajout de la commande collectstatic dans la phase de build Cela garantit que les fichiers statiques sont collectés avant le déploiement Dans nixpacks.toml : Séparation des commandes mkdir et collectstatic pour plus de clarté Ajout de l'option --clear pour garantir que les anciens fichiers sont supprimés
Voilà ! J'ai effectué trois modifications importantes pour résoudre définitivement le problème des fichiers statiques :
Dans settings.py :
Configuration de Whitenoise simplifiée et renforcée, active en développement et en production
Ajout de paramètres de compression et de cache pour améliorer les performances
Vérification que le middleware Whitenoise est bien positionné dans tous les cas
Dans railway.toml :
Ajout de la commande collectstatic dans la phase de build
Cela garantit que les fichiers statiques sont collectés avant le déploiement
Dans nixpacks.toml :
Séparation des commandes mkdir et collectstatic pour plus de clarté
Ajout de l'option --clear pour garantir que les anciens fichiers sont supprimés

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -10,7 +10,8 @@ cmds = [
 [phases.build]
 cmds = [
   'cd frontend && npm run build',
-  'cd backend && mkdir -p staticfiles && python manage.py collectstatic --noinput'
+  'cd backend && mkdir -p staticfiles',
+  'cd backend && python manage.py collectstatic --noinput --clear'
 ]
 
 [start]
