--- a/railway.toml
+++ b/railway.toml
@@ -3,7 +3,7 @@ builder = "nixpacks"
 buildCommand = "cd backend && pip install --break-system-packages -r requirements.txt && cd ../frontend && npm ci --legacy-peer-deps && npm run build && ls -la dist/ && cd ../backend && python manage.py collectstatic --noinput --clear && mkdir -p staticfiles"
 
 [deploy]
-startCommand = "cd backend && gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT"
+startCommand = "cd backend && python -m gunicorn jaelleshop.wsgi:application --bind 0.0.0.0:$PORT"
 releaseCommand = "cd backend && python manage.py migrate --noinput && python manage.py create_admin && python manage.py populate_database"
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 3
