--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,7 @@ yarn-error.log*
 .rpt2_cache/
 .rts2_cache_cjs/
 .rts2_cache_es/
-.rts2_cache_umd/ 
+.rts2_cache_umd/
+
+# Dossier d'images locales
+/Mesproduits/ 
